--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,8 @@ Carthage/Build
 # Note: if you ignore the Pods directory, make sure to uncomment
 # `pod install` in .travis.yml
 #
-# Pods/
+Pods/
+Podfile.lock
+Example/Pods
+Example/FlowEngine.xcworkspace/xcshareddata/
+Example/FlowEngine.xcodeproj/xcuserdata/
